[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Placeholders/ant_colony_pixel.png" type="Texture" id=1]
[ext_resource path="res://HUD/BaseButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Fonts/BaseFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Objects/BaseScreen.gd" type="Script" id=4]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD/BaseInterface.tscn" type="PackedScene" id=6]
[ext_resource path="res://HUD/Shake.tscn" type="PackedScene" id=7]
[ext_resource path="res://HUD/ShopInterface.tscn" type="PackedScene" id=8]

[node name="Base" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 1017.56, 587.315 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Interface" type="Control" parent="."]
margin_left = 765.114
margin_top = 291.316
margin_right = 805.114
margin_bottom = 331.316
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" parent="Interface" instance=ExtResource( 6 )]
margin_left = -97.0
margin_top = 4.0
margin_right = 559.0
margin_bottom = 280.0

[node name="NinePatchRect" parent="Interface/MarginContainer" index="0"]
margin_right = 656.0
margin_bottom = 276.0

[node name="MarginContainer" parent="Interface/MarginContainer" index="1"]
margin_right = 656.0
margin_bottom = 276.0

[node name="CenterContainer" parent="Interface/MarginContainer/MarginContainer" index="0"]
margin_right = 656.0
margin_bottom = 276.0

[node name="VBoxContainer" parent="Interface/MarginContainer/MarginContainer/CenterContainer" index="0"]
visible = false
margin_left = 328.0
margin_top = 138.0
margin_right = 328.0
margin_bottom = 138.0

[node name="Label2" parent="Interface/MarginContainer/MarginContainer/CenterContainer/VBoxContainer" index="0"]
visible = false
margin_right = 406.0

[node name="BaseButton" parent="Interface/MarginContainer/MarginContainer/CenterContainer/VBoxContainer" index="1"]
visible = false
margin_top = 0.0
margin_right = 406.0
margin_bottom = 50.1093

[node name="HBoxContainer" type="HBoxContainer" parent="Interface/MarginContainer/MarginContainer/CenterContainer" index="1"]
margin_left = 5.0
margin_top = 23.0
margin_right = 651.0
margin_bottom = 253.0

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/MarginContainer/MarginContainer/CenterContainer/HBoxContainer"]
margin_right = 546.0
margin_bottom = 230.0

[node name="Label" type="Label" parent="Interface/MarginContainer/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 546.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Shop"
uppercase = true

[node name="MoreAnts" parent="Interface/MarginContainer/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 36.0
margin_right = 546.0
margin_bottom = 86.1093
text = "Bribe more ants"

[node name="UpgradeFood" parent="Interface/MarginContainer/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 90.0
margin_right = 546.0
margin_bottom = 140.109
text = "Increase max food"

[node name="UpgradeAnts" parent="Interface/MarginContainer/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 144.0
margin_right = 546.262
margin_bottom = 194.109
text = "Increase max ant number"

[node name="ErrorMsg" type="Label" parent="Interface/MarginContainer/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 546.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = " "
align = 1

[node name="Shake" parent="Interface/MarginContainer/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/ErrorMsg" instance=ExtResource( 7 )]

[node name="VBoxContainer2" type="VBoxContainer" parent="Interface/MarginContainer/MarginContainer/CenterContainer/HBoxContainer"]
margin_left = 550.0
margin_right = 646.0
margin_bottom = 230.0

[node name="Label" type="Label" parent="Interface/MarginContainer/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer2"]
margin_right = 96.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "cost"

[node name="Label2" type="Label" parent="Interface/MarginContainer/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 96.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "cost"
align = 1

[node name="Label3" type="Label" parent="Interface/MarginContainer/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 72.0
margin_right = 96.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "cost"
align = 1

[node name="Label4" type="Label" parent="Interface/MarginContainer/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 108.0
margin_right = 96.0
margin_bottom = 140.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "cost"
align = 1

[node name="WorldMapButton" parent="Interface" instance=ExtResource( 2 )]
margin_left = 18.1343
margin_top = 287.37
margin_right = 372.396
margin_bottom = 337.479
text = "Go to World Map"

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="ShopInterface" parent="." instance=ExtResource( 8 )]
margin_left = 565.744
margin_top = 36.353
margin_right = 565.744
margin_bottom = 36.353
[connection signal="pressed" from="Interface/MarginContainer/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/MoreAnts" to="." method="_on_MoreAnts_pressed"]
[connection signal="pressed" from="Interface/MarginContainer/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/UpgradeFood" to="." method="_on_UpgradeFood_pressed"]
[connection signal="pressed" from="Interface/MarginContainer/MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/UpgradeAnts" to="." method="_on_UpgradeAnts_pressed"]
[connection signal="pressed" from="Interface/WorldMapButton" to="." method="_on_BaseButton_pressed"]

[editable path="Interface/MarginContainer"]
